added ether links

--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
         <img src="img/etherscape2.jpg" alt="Project 1 Image 2">
         <img src="img/etherscape3.jpg" alt="Project 1 Image 3">
 
-        <video src="img/etherscape1.mp4" controls></video>
-        <video src="img/etherscape2.mp4" controls></video>
-        <video src="img/etherscape3.mp4" controls></video>
+        <video src="https://maxrentmeester.nl/img/ether/etherscape1.mp4" controls></video>
+        <video src="https://maxrentmeester.nl/img/ether/etherscape2.mp4" controls></video>
+        <video src="https://maxrentmeester.nl/img/ether/etherscape3.mp4" controls></video>
       </div>
       <a class="close-link" href="javascript:void(0)" onclick="hideProject('project1')">
         « Hide Project
